--- a/css/four*five.css
+++ b/css/four*five.css
@@ -20,7 +20,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Ubuntu', sans-serif;
-    white-space: nowrap;
+    
   }
   
   
@@ -47,8 +47,8 @@
   .cards_list .card{
     cursor: pointer;
     position: relative;
-    height: 28%;
-    width:27%;
+    height: 21%;
+    width:18%;
   }
   
   .card.vibrate{
@@ -112,6 +112,7 @@
     border-radius: 7px;
     background: #b8b8b8c7;
     box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    white-space: nowrap;
   }
   
   .information div{
@@ -147,22 +148,28 @@
     transition: 0.3s ease;
   }
 
-  .information a button{
+  .information a{
     text-decoration: none;
-    border: 2px solid rgb(163, 18, 54);
-    color: rgb(163, 18, 54);
-  }
-
-  .information a button:hover{
-    background:rgb(163, 18, 54);
-    color: #fff;
-
   }
   
   .information button:hover{
     color: #fff;
     background: rgb(18, 52, 163);
   }
+
+  
+.information a button{
+  text-decoration: none;
+  border: 2px solid rgb(163, 18, 54);
+  color: rgb(163, 18, 54);
+}
+
+.information a button:hover{
+  background:rgb(163, 18, 54);
+  color: #fff;
+
+}
+  
   
   .hidden{
   opacity:0;
@@ -259,6 +266,8 @@
     z-index: 1;
     backdrop-filter: blur(4px);
   }
+  
+
 
 
   @media screen and (max-width:1100px){
@@ -275,83 +284,119 @@
     .information div{
       padding:1rem 4rem;
     }
-}
-
-@media screen and (max-width:1000px){
-  .cards_list{
-    height: 25rem;
-    width: 25rem;
-}
-  .container{
-    padding:2rem 2rem;
   }
-
+  
+  @media screen and (max-width:1000px){
+    .cards_list{
+      height: 25rem;
+      width: 25rem;
+  }
+    .container{
+      padding:2rem 2rem;
+    }
+  
+    .information div{
+      gap:3.3rem;
+    } 
+  }
+  
+  @media screen and (max-width:800px){
+    .cards_list{
+      height: 25rem;
+      width: 25rem;
+  }
+  body{
+    flex-direction: column;
+  }
+  .information {
+    padding: 3rem 4rem;
+  }
   .information div{
-    gap:3.3rem;
+    flex-direction: row;
+    gap: 1rem;
   } 
-}
-
-@media screen and (max-width:800px){
+  .container {
+    padding: 2rem 6rem;
+  }
   .cards_list{
-    height: 25rem;
-    width: 25rem;
-}
-body{
-  flex-direction: column;
-}
-.information {
-  padding: 3rem 4rem;
-}
-.information div{
-  flex-direction: row;
-  gap: 1rem;
-} 
-.container {
-  padding: 2rem 6rem;
-}
-.cards_list{
-  height: 35rem;
-  width: 35rem;
-}
-}
-  
-  /* @media screen and (max-width: 700px) {
-    .cards_list{
-      height: 350px;
-      width: 350px;
-    }
-    .card .card-front img{
-      max-width: 16px;
-    }
-    .card .card-back img{
-      max-width: 40px;
-    }
+    height: 35rem;
+    width: 35rem;
+  }
+  .alert-fail p {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .alert p {
+    font-size: 1.5rem;
+    text-align: center;
+  }
   }
   
-  @media screen and (max-width: 530px) {
-    .cards_list{
-      height: 300px;
-      width: 300px;
+  @media screen and (max-width:700px){
+    .information {
+      padding: 1rem;
+  }
+  .container {
+    padding: 1rem;
+  }
+  .information p {
+    font-size: 1rem;
+}
+.information div {
+  padding: 1rem;
+}
+  }
+
+
+  @media screen and (max-width:600px){
+    .cards_list {
+    height: 25rem;
+    width: 25rem;
     }
-    .card .card-back img{
-      max-width: 35px;
+    .information p {
+      font-size: 0.7rem;
+  }
+  .information button{
+    font-size: 0.7rem;
+  }
+  .card .card-back img {
+    max-width: 4rem;
+  }
+}
+
+@media screen and (max-width:500px){
+  .cards_list {
+    height: 20rem;
+    width: 20rem;
     }
-    .information{
-      margin-top: 10px;
-      padding: 0 15px;
-      height: calc(100% / 4 - 20px);
-    }
-    .information p{
-      height: 15px;
-      font-size: 17px;
-      padding-right: 13px;
-    }
-    .information button{
-      font-size: 13px;
-      padding: 5px 10px;
-      border: none;
-      color: #fff;
-      background: #6563ff;
-    }
-  } */
-  
+    .information div {
+      padding: 0.5rem;
+  }
+  .information p {
+    font-size: 0.5rem;
+}
+.information button{
+  font-size: 0.5rem;
+}
+.card .card-back img {
+  max-width: 3rem;
+}
+.alert p {
+  font-size: 1rem;
+}
+.alert a {
+  padding: 0.5rem 1rem;
+}
+.alert{
+  height:30vh;
+}
+.alert-fail p {
+  font-size: 1rem;
+}
+.alert-fail a {
+  padding: 0.5rem 1rem;
+}
+.alert-fail{
+  height:30vh;
+}
+}
