--- a/css/three*four.css
+++ b/css/three*four.css
@@ -20,7 +20,6 @@ body{
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Ubuntu', sans-serif;
-  white-space: nowrap;
 }
 
 
@@ -112,6 +111,7 @@ body{
   border-radius: 7px;
   background: #b8b8b8c7;
   box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  white-space: nowrap;
 }
 
 .information div{
@@ -320,45 +320,83 @@ body{
   height: 35rem;
   width: 35rem;
 }
+.alert-fail p {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.alert p {
+  font-size: 1.5rem;
+  text-align: center;
+}
 }
 
 
-/* @media screen and (max-width: 700px) {
-  .cards_list{
-    height: 350px;
-    width: 350px;
-  }
-  .card .card-front img{
-    max-width: 16px;
-  }
-  .card .card-back img{
-    max-width: 40px;
-  }
+  
+@media screen and (max-width:700px){
+  .information {
+    padding: 1rem;
+}
+.container {
+  padding: 1rem;
+}
+.information p {
+  font-size: 1rem;
+}
+.information div {
+padding: 1rem;
+}
 }
 
-@media screen and (max-width: 530px) {
-  .cards_list{
-    height: 300px;
-    width: 300px;
+
+@media screen and (max-width:600px){
+  .cards_list {
+  height: 25rem;
+  width: 25rem;
   }
-  .card .card-back img{
-    max-width: 35px;
+  .information p {
+    font-size: 0.7rem;
+}
+.information button{
+  font-size: 0.7rem;
+}
+.card .card-back img {
+  max-width: 4rem;
+}
+}
+
+@media screen and (max-width:500px){
+  .cards_list {
+    height: 20rem;
+    width: 20rem;
+    }
+    .information div {
+      padding: 0.5rem;
   }
-  .information{
-    margin-top: 10px;
-    padding: 0 15px;
-    height: calc(100% / 4 - 20px);
-  }
-  .information p{
-    height: 15px;
-    font-size: 17px;
-    padding-right: 13px;
-  }
-  .information button{
-    font-size: 13px;
-    padding: 5px 10px;
-    border: none;
-    color: #fff;
-    background: #6563ff;
-  }
-} */
+  .information p {
+    font-size: 0.5rem;
+}
+.information button{
+  font-size: 0.5rem;
+}
+.card .card-back img {
+  max-width: 3rem;
+}
+.alert p {
+  font-size: 1rem;
+}
+.alert a {
+  padding: 0.5rem 1rem;
+}
+.alert{
+  height:30vh;
+}
+.alert-fail p {
+  font-size: 1rem;
+}
+.alert-fail a {
+  padding: 0.5rem 1rem;
+}
+.alert-fail{
+  height:30vh;
+}
+}
